<resources>
    <string name="app_name">Page</string>
    <string name="connect">Connect</string>
    <string name="_192">192</string>
    <string name="_168">168</string>
    <string name="_0">000</string>
    <string name="_100">100</string>
    <string name="_50000">50000</string>
    <string name="port">port</string>
    <string name="download">Download</string>
    <string name="sample_ip">Ex: 192.168.0.100</string>
    <string name="sample_port">Ex: 8000</string>
    <string name="looks_empty">Hmm, looks empty</string>
    <string name="add_devices_to_start">Add your devices to get started</string>
    <string name="add_devices">Add Devices</string>
    <string name="add_device">Add Device</string>
    <string name="enter_device_address">Enter your device\'s address to connect</string>
    <string name="enter_device_ip">Enter your device\'s IP address</string>
    <string name="enter_device_port">Enter your device\'s port number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="one_moment_saying_hello">One moment, saying hello…</string>
    <string name="type_a_message">Type a message</string>
    <string name="swipe_right_to_send">Swipe right to send</string>
    <string name="send">Send</string>
    <string name="devices">Devices</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="device_is_offline">Device is offline</string>
    <string name="device">Device</string>
    <string name="device_ip">Device IP</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="offline_host_message_1">1. Ensure your server is running</string>
    <string name="offline_host_message_2">2. Ensure correct IP &amp; Port in Settings</string>
    <string name="offline_host_message_3">3. We\'ll automatically detect any changes</string>
    <string name="enter_a_nickname_for_this_device">Enter a nickname for this device</string>
    <string name="sample_name">Ex: My Mac</string>
    <string name="finish">Finish</string>
    <string name="device_name">Device Name</string>
</resources>