<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewHostFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_view_host_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f1f3f8"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragment_view_host_search_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/semi_round_rectangle"
            android:drawableStart="@drawable/ic_search_outline"
            android:drawableLeft="@drawable/ic_search_outline"
            android:drawablePadding="16dp"
            android:hint="@string/search"
            android:lines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_view_host_cwd_actions_container" />

        <LinearLayout
            android:id="@+id/fragment_view_host_cwd_actions_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_view_host_files_back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_return_up_back"
                android:tint="#046bf1" />

            <TextView
                android:id="@+id/fragment_view_host_cwd_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#0077b6"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/books" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_cloud_download_outline"
                android:tint="#046bf1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_bookmark_outline"
                android:tint="#046bf1" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_view_host_files_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_view_host_search_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_view_host_no_hosts_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_undraw_devices_re_dxae" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/looks_empty"
                android:textAllCaps="true"
                android:textColor="#046bf1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/add_devices_to_start"
                android:textColor="#3c4b62"
                android:textSize="18sp" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:gravity="center"-->
            <!--                android:orientation="horizontal">-->

            <!--                <ImageView-->
            <!--                    android:layout_width="36dp"-->
            <!--                    android:layout_height="36dp"-->
            <!--                    android:contentDescription="@string/add_devices"-->
            <!--                    android:src="@drawable/ic_phone_portrait_outline"-->
            <!--                    app:tint="#3c4b62" />-->

            <!--                <ImageView-->
            <!--                    android:layout_width="64dp"-->
            <!--                    android:layout_height="64dp"-->
            <!--                    android:layout_marginLeft="8dp"-->
            <!--                    android:contentDescription="@string/add_devices"-->
            <!--                    android:src="@drawable/ic_laptop_outline"-->
            <!--                    app:tint="#3c4b62" />-->

            <!--            </LinearLayout>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->

            <!--                android:gravity="center"-->
            <!--                android:orientation="horizontal">-->

            <!--                <ImageView-->
            <!--                    android:layout_width="64dp"-->
            <!--                    android:layout_height="64dp"-->
            <!--                    android:layout_marginRight="8dp"-->
            <!--                    android:contentDescription="@string/add_devices"-->
            <!--                    android:src="@drawable/ic_desktop_outline"-->
            <!--                    app:tint="#3c4b62" />-->

            <!--                <ImageView-->
            <!--                    android:layout_width="48dp"-->
            <!--                    android:layout_height="48dp"-->
            <!--                    android:contentDescription="@string/add_devices"-->
            <!--                    android:src="@drawable/ic_game_controller_outline"-->
            <!--                    app:tint="#3c4b62" />-->

            <!--            </LinearLayout>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_view_host_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="24dp"
                android:text="@string/add_device"
                android:textColor="#FFF"
                app:backgroundTint="#046bf1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_view_host_offline_host_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:contentDescription="@string/device_is_offline"
                android:src="@drawable/ic_undraw_not_found_60pq" />

            <TextView
                android:id="@+id/fragment_view_host_offline_host_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="#046bf1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Krishna-Mac is Offline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/offline_host_message_1"
                android:textColor="#3c4b62"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/offline_host_message_2"
                android:textColor="#3c4b62"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/offline_host_message_3"
                android:textColor="#3c4b62"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_view_host_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_settings_outline"
                android:drawableLeft="@drawable/ic_settings_outline"
                android:drawablePadding="8dp"
                android:paddingHorizontal="24dp"
                android:text="@string/settings"
                android:textColor="#FFF"
                app:backgroundTint="#046bf1"
                app:drawableTint="#FFF" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>